--- a/src/content/blog/2025-10-listers.mdx
+++ b/src/content/blog/2025-10-listers.mdx
@@ -3,22 +3,23 @@ title: "LISTERS: A Glimpse Into Extreme Birdwatching"
 description: Listers is a comedic documentary film about two brothers who decide to do a Lower 48 Big Year in their minivan to learn what birding is all about.
 date: 2025-10-13
 tags:
+    - birding
     - film
     - link
 draft: false
 ---
 import { YouTube } from 'astro-embed';
 
-*Listers* is a comedic documentary film about two brothers who decide to do a Lower 48 Big Year while living out of their minivan to learn what birding is all about. The joys and absurdities of birding are on display in equals parts. 
+*Listers* is a comedic documentary about two brothers who decide to do a Lower 48 Big Year  living out of their minivan in order to learn what birding is all about. The joys and absurdities of birding are on display in equal parts. 
 
 From [Nick Lund's article in Slate](https://slate.com/culture/2025/09/listers-documentary-youtube-birding-birdwatching-movie-ebird.html):
 
 
-> They have the kind of easygoing, infectious, and filthy banter that only exists between two siblings on a road trip, and the most enjoyable parts of the documentary [...] are the times when they’re just hanging out in their minivan. Quentin, with his mullet and drawl, is a natural in front of the camera, and Owen [...] balances the grainy handycam footage of the moments when the brothers are most beaten down with truly gorgeous, high-definition video of the birds they’ve found.
+> They have the kind of easygoing, infectious, and filthy banter that only exists between two siblings on a road trip [...] Quentin, with his mullet and drawl, is a natural in front of the camera, and Owen [...] balances the grainy handycam footage of the moments when the brothers are most beaten down with truly gorgeous, high-definition video of the birds they’ve found.
 
 > What many other birders and I love about *Listers* [...] is that it’s the first time we’ve seen “real” birding on screen. This is the birding of gas stations, ponds behind a women’s prison, and “the bird’s right there on the mud next to the Wiffle ball and the tire.”
 
-It deftly touches on so many aspects of birding with a sly grin and a wink. For birders, their trials and tribulations are just so relatable. There is a decent showing from the Arizona birding community as well -- props to Robert for being one of the most reasonable-seeming people interviewed in the movie. Did I mention it was funny? It is surprisingly funny. 
+It deftly touches on so many aspects of birding with a sly grin and a wink. The brothers' trials and tribulations are so relatable. Did I mention it was funny? It is surprisingly funny. 
 
 Give it a watch on [YouTube](https://www.youtube.com/watch?v=zl-wAqplQAo):
 
