--- a/src/content/blog/2025-10-listers.mdx
+++ b/src/content/blog/2025-10-listers.mdx
@@ -1,7 +1,7 @@
 ---
 title: "LISTERS: A Glimpse Into Extreme Birdwatching"
-description: Listers is a comedic documentary film about two brothers who decide to do a Lower 48 Big Year in their minivan to learn what birding is all about.
-date: 2025-10-13
+description: Listers is a comedic documentary about two brothers who decide to do a Lower 48 Big Year living out of their minivan in order to learn what birding is all about.
+date: 2025-10-14
 tags:
     - birding
     - film
@@ -10,7 +10,7 @@ draft: false
 ---
 import { YouTube } from 'astro-embed';
 
-*Listers* is a comedic documentary about two brothers who decide to do a Lower 48 Big Year  living out of their minivan in order to learn what birding is all about. The joys and absurdities of birding are on display in equal parts. 
+*Listers* is a comedic documentary about two brothers who decide to do a Lower 48 Big Year living out of their minivan in order to learn what birding is all about. The joys and absurdities of birding are on display in equal parts. 
 
 From [Nick Lund's article in Slate](https://slate.com/culture/2025/09/listers-documentary-youtube-birding-birdwatching-movie-ebird.html):
 
