--- a/src/content/blog/2025-10-listers.mdx
+++ b/src/content/blog/2025-10-listers.mdx
@@ -19,7 +19,7 @@ From [Nick Lund's article in Slate](https://slate.com/culture/2025/09/listers-do
 
 > What many other birders and I love about *Listers* [...] is that it’s the first time we’ve seen “real” birding on screen. This is the birding of gas stations, ponds behind a women’s prison, and “the bird’s right there on the mud next to the Wiffle ball and the tire.”
 
-It deftly touches on so many aspects of birding with a sly grin and a wink. The brothers' trials and tribulations are so relatable. Did I mention it was funny? It is surprisingly funny. 
+It deftly touches on so many aspects of birding with a sly grin and a wink. Their trials and tribulations are so relatable. Did I mention it was funny? It is surprisingly funny. 
 
 Give it a watch on [YouTube](https://www.youtube.com/watch?v=zl-wAqplQAo):
 
