raincrow portugal, tags cleanup

--- a/src/content/projects/evs/index.mdx
+++ b/src/content/projects/evs/index.mdx
@@ -2,6 +2,7 @@
 title: Equestrian Volunteer Scheduler
 description: Custom server-rendered full stack administrative web application with role-based access control for local non-profit.
 tags:
+    - evs
     - react
     - remix
     - typescript
