--- a/src/content/blog/weekly-update-2024/index.mdx
+++ b/src/content/blog/weekly-update-2024/index.mdx
@@ -25,7 +25,7 @@ I'm back from a brief blog hiatus. January is quickly coming to a close so I fig
 
 ...and I got engaged!
 
-<ConfettiWrapper client:load>
+<ConfettiWrapper>
 ![The happy couple engaged](./engaged.jpg)
 </ConfettiWrapper>
 
@@ -39,5 +39,3 @@ I have been doing quite a bit of coding as well. I've been hard at work on the C
 I had my first meeting with a tech recruiter recently which went well. The position ended up not being a great fit for me but it was refreshing to have some interest, especially in a job market flooded with many experienced developers looking for work.
 
 More soon.
-
-
