Rearrange projects page

--- a/src/content/projects/ccam/index.mdx
+++ b/src/content/projects/ccam/index.mdx
@@ -1,12 +1,12 @@
 ---
 title: Center for Concrete and Abstract Machines
-description: Custom site for Chicago Arts non-profit.
+description: Bespoke site for Chicago Arts non-profit.
 techtags:
     - html
     - css
 githubUrl: https://github.com/Center-Abstract-Concrete-Machines/CCAM
 liveUrl: https://ccam.world
-featured: false
+featured: true
 date: 2024-06-05
 draft: false
 tags:
