--- a/src/content/projects/evs/index.mdx
+++ b/src/content/projects/evs/index.mdx
@@ -16,7 +16,7 @@ tags:
     - css
     - javascript
 githubUrl: https://github.com/opportunity-hack/evs
-featured: true
+featured: false
 date: 2023-11-16
 ---
 import RelatedPosts from '@components/RelatedPosts.astro'
