--- a/src/content/blog/2024-year-in-review/index.mdx
+++ b/src/content/blog/2024-year-in-review/index.mdx
@@ -16,39 +16,38 @@ tags:
     - family
 draft: false
 ---
-import Spacer from 'src/components/Spacer.astro'
+
+import Spacer from 'src/components/Spacer.astro';
 
 I saw 9 life birds.
 
--   [Curlew Sandpiper](https://ebird.org/checklist/S187945451)
--   [Purple Gallinule](https://ebird.org/checklist/S190261294)
--   [Allen's Hummingbird](https://ebird.org/checklist/S204753166)
--   [Oak Titmouse](https://ebird.org/checklist/S204753166)
--   [Royal Tern](https://ebird.org/checklist/S204879311)
--   [Parasitic Jaeger](https://ebird.org/checklist/S204879206)
--   [Swinhoe's White-eye](https://ebird.org/checklist/S204879086)
--   [Black Skimmer](https://ebird.org/checklist/S204973047)
--   [Black-vented Shearwater](https://ebird.org/checklist/S204973047)
+- [Curlew Sandpiper](https://ebird.org/checklist/S187945451)
+- [Purple Gallinule](https://ebird.org/checklist/S190261294)
+- [Allen's Hummingbird](https://ebird.org/checklist/S204753166)
+- [Oak Titmouse](https://ebird.org/checklist/S204753166)
+- [Royal Tern](https://ebird.org/checklist/S204879311)
+- [Parasitic Jaeger](https://ebird.org/checklist/S204879206)
+- [Swinhoe's White-eye](https://ebird.org/checklist/S204879086)
+- [Black Skimmer](https://ebird.org/checklist/S204973047)
+- [Black-vented Shearwater](https://ebird.org/checklist/S204973047)
 
 I saw 9 new Arizona birds.
 
--   [Laughing Gull](https://ebird.org/checklist/S183141611)
--   [Curlew Sandpiper](https://ebird.org/checklist/S187945451)
--   [Purple Gallinule](https://ebird.org/checklist/S190261294)
--   [Northern Waterthrush](https://ebird.org/checklist/S193757856)
--   [Blackpoll Warbler](https://ebird.org/checklist/S194480456)
--   [Yellow-throated Warbler](https://ebird.org/checklist/S198149901)
--   [Bay-breasted Warbler](https://ebird.org/checklist/S199709698)
--   [Common Tern](https://ebird.org/checklist/S200237909)
--   [Blackburnian Warbler](https://ebird.org/checklist/S201167278)
+- [Laughing Gull](https://ebird.org/checklist/S183141611)
+- [Curlew Sandpiper](https://ebird.org/checklist/S187945451)
+- [Purple Gallinule](https://ebird.org/checklist/S190261294)
+- [Northern Waterthrush](https://ebird.org/checklist/S193757856)
+- [Blackpoll Warbler](https://ebird.org/checklist/S194480456)
+- [Yellow-throated Warbler](https://ebird.org/checklist/S198149901)
+- [Bay-breasted Warbler](https://ebird.org/checklist/S199709698)
+- [Common Tern](https://ebird.org/checklist/S200237909)
+- [Blackburnian Warbler](https://ebird.org/checklist/S201167278)
 
 I became an eBird reviewer for Maricopa county.
 
 I saw a [Yellow-breasted Chat](https://ebird.org/checklist/S194355113) from my parent's pool in September.
 
 ![Yellow-breasted Chat on a pool fence](./chat.png)
-
-
 
 <br />
 
@@ -88,9 +87,9 @@ In July, I turned 36 and my grandmother turned 101.
 
 <br />
 
-[I got a new job](/blog/2024-08-new-job/). We got Goose a fancy water fountain. He loves it. 
+[I got a new job](/blog/2024-08-new-job/). We got Goose a fancy water fountain. He loves it.
 
-{/* Nell got a beautiful wedding dress on discount from a very strange store in the Prescott Mall.  */}
+{/* Nell got a beautiful wedding dress on discount from a very strange store in the Prescott Mall. */}
 
 Nell and I went to the Prescott Mall. We stopped in to get samosas and mango lassi from an Indian food / Disney + Harry Potter themed english tea room called Mr. Moussetache Cafe. A store across the walkway called Foot Fetish Clothing Company inspired us to explore the mall more. We wandered into a general store with no name having a going-out-of-business sale. Nell found a beautiful wedding dress.
 
@@ -105,7 +104,6 @@ My old friend Geoff and my uncle Steve died suddenly in the fall and winter. I g
 ![Family at the beach](./familybeach.png)
 
 <Spacer />
-
 
 A lot happened. Some of it was great, some of it was terrible. A lot of it was stressful and a lot of groundwork was laid for a hopefully calmer, fruitful year ahead, at least in our little corner of the world.
 
