--- a/src/content/blog/scrolling-turkey-part-ii/index.mdx
+++ b/src/content/blog/scrolling-turkey-part-ii/index.mdx
@@ -9,7 +9,8 @@ tags:
     - turkeys
 draft: false
 ---
-import Turkey from '@components/Turkey.svelte'
+
+import Turkey from '@components/Turkey.svelte';
 
 In my last post I made a [scrolling turkey](/blog/scrolling-turkey) but quickly realized, it needed to gobble.
 
