--- a/src/content/projects/_project-template.mdx
+++ b/src/content/projects/_project-template.mdx
@@ -10,7 +10,8 @@ date:
 draft: true
 tags:
 ---
-import RelatedPosts from '@components/RelatedPosts.astro'
+
+import RelatedPosts from '@components/RelatedPosts.astro';
 
 ## Links
 
