--- a/src/content/projects/ccam/index.mdx
+++ b/src/content/projects/ccam/index.mdx
@@ -20,7 +20,8 @@ tags:
     - svelte
     - preact
 ---
-import RelatedPosts from '@components/RelatedPosts.astro'
+
+import RelatedPosts from '@components/RelatedPosts.astro';
 
 ## Links
 
