--- a/src/content/projects/raincrow/index.mdx
+++ b/src/content/projects/raincrow/index.mdx
@@ -2,22 +2,23 @@
 title: RainCrow
 description: Automatically gather weather data for eBird checklists using historical weather APIs. Used by thousands of people every week.
 techtags:
-  - Svelte/Sveltekit
-  - HTML
-  - CSS
-  - Javascript
+    - Svelte/Sveltekit
+    - HTML
+    - CSS
+    - Javascript
 tags:
-  - raincrow
-  - svelte/sveltekit
-  - html
-  - css
-  - javascript
+    - raincrow
+    - svelte/sveltekit
+    - html
+    - css
+    - javascript
 githubUrl: https://github.com/parkerdavis1/raincrow-sveltekit
 liveUrl: https://raincrow.app/
 featured: true
 date: 2023-11-16
 ---
-import RelatedPosts from '@components/RelatedPosts.astro'
+
+import RelatedPosts from '@components/RelatedPosts.astro';
 
 ## Links
 
@@ -47,4 +48,7 @@ It does require more input from the user, but I tried to make the input as painl
 
 ## Posts tagged with "RainCrow"
 
-<RelatedPosts tag="raincrow"  bmsTitles={['Slow Doves (and updates)', 'RainCrow']} />
+<RelatedPosts
+    tag="raincrow"
+    bmsTitles={['Slow Doves (and updates)', 'RainCrow']}
+/>
