--- a/src/content/blog/2025-10-listers.mdx
+++ b/src/content/blog/2025-10-listers.mdx
@@ -1,5 +1,5 @@
 ---
-title: "LISTERS: A Glimpse Into Extreme Birdwatching"
+title: 'LISTERS: A Glimpse Into Extreme Birdwatching'
 description: Listers is a comedic documentary about two brothers who decide to do a Lower 48 Big Year living out of their minivan in order to learn what birding is all about.
 date: 2025-10-14
 tags:
@@ -8,17 +8,18 @@ tags:
     - link
 draft: false
 ---
+
 import { YouTube } from 'astro-embed';
 
-*Listers* is a comedic documentary about two brothers who decide to do a Lower 48 Big Year living out of their minivan in order to learn what birding is all about. Both the fun and the absurdity of birding and the community around it are on display.
+_Listers_ is a comedic documentary about two brothers who decide to do a Lower 48 Big Year living out of their minivan in order to learn what birding is all about. Both the fun and the absurdity of birding and the community around it are on display.
 
 From [Nick Lund's article in Slate](https://slate.com/culture/2025/09/listers-documentary-youtube-birding-birdwatching-movie-ebird.html):
 
 > They have the kind of easygoing, infectious, and filthy banter that only exists between two siblings on a road trip [...] Quentin, with his mullet and drawl, is a natural in front of the camera, and Owen [...] balances the grainy handycam footage of the moments when the brothers are most beaten down with truly gorgeous, high-definition video of the birds they’ve found.
 
-> What many other birders and I love about *Listers* [...] is that it’s the first time we’ve seen “real” birding on screen. This is the birding of gas stations, ponds behind a women’s prison, and “the bird’s right there on the mud next to the Wiffle ball and the tire.”
+> What many other birders and I love about _Listers_ [...] is that it’s the first time we’ve seen “real” birding on screen. This is the birding of gas stations, ponds behind a women’s prison, and “the bird’s right there on the mud next to the Wiffle ball and the tire.”
 
-Also, did I mention it was funny? It is surprisingly funny. 
+Also, did I mention it was funny? It is surprisingly funny.
 
 Give it a watch on [YouTube](https://www.youtube.com/watch?v=zl-wAqplQAo):
 
