--- a/src/content/blog/ebird-bookmarklet/index.mdx
+++ b/src/content/blog/ebird-bookmarklet/index.mdx
@@ -21,14 +21,78 @@ I previously built an alternative [Rare Bird Alert!](https://parkerdavis.dev/pro
 ## Here it is
 
 ```js
-javascript:(()=>{const r=document.querySelectorAll(".Observation");if(r.length===0){alert("No eBird observations found on page!");return}if(document.querySelector("[data-species]")){alert("Already run script. If you are having issues, reload page and try again.");return}const c=r[0].parentNode;function i(t){return t.querySelector(".Observation-species .Heading-main").innerText}function u(t){let e=new Set;for(const n of t){const o=i(n);e.add(o)}return e}function p(t,e){for(const n of t){const o=document.createElement("details");o.setAttribute("data-species",n),o.setAttribute("style","margin-top: 0.5em");const s=document.createElement("summary");s.setAttribute("style","cursor: pointer; list-style:"),s.innerText=n,o.appendChild(s),e.appendChild(o)}}function d(t){for(let e of t){const n=i(e),o=document.querySelector(`[data-species="${n}"]`),s=e.previousElementSibling;o.appendChild(s),o.appendChild(e)}}function l(t){for(species of t){const e=document.querySelectorAll(`[data-species="${species}"] .Observation`).length.toString(),n=document.querySelector(`[data-species="${species}"] summary`);n.innerText=`${n.innerText} (${e})`}}const a=u(r);p(a,c),d(r),l(a)})();
+javascript: (() => {
+    const r = document.querySelectorAll('.Observation');
+    if (r.length === 0) {
+        alert('No eBird observations found on page!');
+        return;
+    }
+    if (document.querySelector('[data-species]')) {
+        alert(
+            'Already run script. If you are having issues, reload page and try again.',
+        );
+        return;
+    }
+    const c = r[0].parentNode;
+    function i(t) {
+        return t.querySelector('.Observation-species .Heading-main').innerText;
+    }
+    function u(t) {
+        let e = new Set();
+        for (const n of t) {
+            const o = i(n);
+            e.add(o);
+        }
+        return e;
+    }
+    function p(t, e) {
+        for (const n of t) {
+            const o = document.createElement('details');
+            (o.setAttribute('data-species', n),
+                o.setAttribute('style', 'margin-top: 0.5em'));
+            const s = document.createElement('summary');
+            (s.setAttribute('style', 'cursor: pointer; list-style:'),
+                (s.innerText = n),
+                o.appendChild(s),
+                e.appendChild(o));
+        }
+    }
+    function d(t) {
+        for (let e of t) {
+            const n = i(e),
+                o = document.querySelector(`[data-species="${n}"]`),
+                s = e.previousElementSibling;
+            (o.appendChild(s), o.appendChild(e));
+        }
+    }
+    function l(t) {
+        for (species of t) {
+            const e = document
+                    .querySelectorAll(
+                        `[data-species="${species}"] .Observation`,
+                    )
+                    .length.toString(),
+                n = document.querySelector(
+                    `[data-species="${species}"] summary`,
+                );
+            n.innerText = `${n.innerText} (${e})`;
+        }
+    }
+    const a = u(r);
+    (p(a, c), d(r), l(a));
+})();
 ```
 
 ## How to use it
 
-<p>You can drag this link into your bookmarks bar in your browser: <a href='javascript:(()=>{const r=document.querySelectorAll(".Observation");if(r.length===0){alert("No eBird observations found on page!");return}if(document.querySelector("[data-species]")){alert("Already run script. If you are having issues, reload page and try again.");return}const c=r[0].parentNode;function i(t){return t.querySelector(".Observation-species .Heading-main").innerText}function u(t){let e=new Set;for(const n of t){const o=i(n);e.add(o)}return e}function p(t,e){for(const n of t){const o=document.createElement("details");o.setAttribute("data-species",n),o.setAttribute("style","margin-top: 0.5em");const s=document.createElement("summary");s.setAttribute("style","cursor: pointer; list-style:"),s.innerText=n,o.appendChild(s),e.appendChild(o)}}function d(t){for(let e of t){const n=i(e),o=document.querySelector(`[data-species="${n}"]`),s=e.previousElementSibling;o.appendChild(s),o.appendChild(e)}}function l(t){for(species of t){const e=document.querySelectorAll(`[data-species="${species}"] .Observation`).length.toString(),n=document.querySelector(`[data-species="${species}"] summary`);n.innerText=`${n.innerText} (${e})`}}const a=u(r);p(a,c),d(r),l(a)})();'>eBird Compress</a></p>
+<p>
+    You can drag this link into your bookmarks bar in your browser:{' '}
+    <a href='javascript:(()=>{const r=document.querySelectorAll(".Observation");if(r.length===0){alert("No eBird observations found on page!");return}if(document.querySelector("[data-species]")){alert("Already run script. If you are having issues, reload page and try again.");return}const c=r[0].parentNode;function i(t){return t.querySelector(".Observation-species .Heading-main").innerText}function u(t){let e=new Set;for(const n of t){const o=i(n);e.add(o)}return e}function p(t,e){for(const n of t){const o=document.createElement("details");o.setAttribute("data-species",n),o.setAttribute("style","margin-top: 0.5em");const s=document.createElement("summary");s.setAttribute("style","cursor: pointer; list-style:"),s.innerText=n,o.appendChild(s),e.appendChild(o)}}function d(t){for(let e of t){const n=i(e),o=document.querySelector(`[data-species="${n}"]`),s=e.previousElementSibling;o.appendChild(s),o.appendChild(e)}}function l(t){for(species of t){const e=document.querySelectorAll(`[data-species="${species}"] .Observation`).length.toString(),n=document.querySelector(`[data-species="${species}"] summary`);n.innerText=`${n.innerText} (${e})`}}const a=u(r);p(a,c),d(r),l(a)})();'>
+        eBird Compress
+    </a>
+</p>
 
-~ or ~ 
+~ or ~
 
 1. Create a random bookmark (this blog post for instance)
 2. Open your bookmark manager
@@ -50,14 +114,16 @@ It works on both desktop and mobile. Consult your browser's documentation if you
 First, we store a NodeList of all the DOM elements for observations in a variable called `observations`. If no observations are found (like if the script is run on a non-eBird alert page) it shows an alert message and stops the execution of the script. If the script has already been run on a page, it will alert you about that as well.
 
 ```js
-const observations = document.querySelectorAll(".Observation");
+const observations = document.querySelectorAll('.Observation');
 if (observations.length === 0) {
-	alert("No eBird observations found on page!");
-	return;
+    alert('No eBird observations found on page!');
+    return;
 }
-if (document.querySelector("[data-species]")) {
-	alert("Already run script. If you are having issues, reload page and try again.");
-	return;
+if (document.querySelector('[data-species]')) {
+    alert(
+        'Already run script. If you are having issues, reload page and try again.',
+    );
+    return;
 }
 ```
 
@@ -112,7 +178,7 @@ function moveObservationsIntoWrappers(observations) {
     for (let observation of observations) {
         const commonName = getSpeciesName(observation);
         const detailNode = document.querySelector(
-            `[data-species="${commonName}"]`
+            `[data-species="${commonName}"]`,
         );
         // Also, grab the spacer node just before each observation
         const spacerNode = observation.previousElementSibling;
@@ -130,13 +196,15 @@ Next, we get the number of observations for each species and append that number 
 
 ```js
 function appendSpeciesObsCount(list) {
-	for (species of list) {
-		const observationCount = document
-			.querySelectorAll(`[data-species="${species}"] .Observation`)
-			.length.toString();
-		const summaryNode = document.querySelector(`[data-species="${species}"] summary`);
-		summaryNode.innerText = `${summaryNode.innerText} (${observationCount})`;
-	}
+    for (species of list) {
+        const observationCount = document
+            .querySelectorAll(`[data-species="${species}"] .Observation`)
+            .length.toString();
+        const summaryNode = document.querySelector(
+            `[data-species="${species}"] summary`,
+        );
+        summaryNode.innerText = `${summaryNode.innerText} (${observationCount})`;
+    }
 }
 ```
 
@@ -153,7 +221,66 @@ appendSpeciesObsCount(uniqueSpeciesList);
 We then run the above code through [esbuild's code minifier](https://esbuild.github.io/api/#minify), which basically removes whitespace and shortens variable names to keep all the same functionality in a more compressed format. The result is terse code ready for a bookmark:
 
 ```js
-javascript:(()=>{const r=document.querySelectorAll(".Observation");if(r.length===0){alert("No eBird observations found on page!");return}if(document.querySelector("[data-species]")){alert("Already run script. If you are having issues, reload page and try again.");return}const c=r[0].parentNode;function i(t){return t.querySelector(".Observation-species .Heading-main").innerText}function u(t){let e=new Set;for(const n of t){const o=i(n);e.add(o)}return e}function p(t,e){for(const n of t){const o=document.createElement("details");o.setAttribute("data-species",n),o.setAttribute("style","margin-top: 0.5em");const s=document.createElement("summary");s.setAttribute("style","cursor: pointer; list-style:"),s.innerText=n,o.appendChild(s),e.appendChild(o)}}function d(t){for(let e of t){const n=i(e),o=document.querySelector(`[data-species="${n}"]`),s=e.previousElementSibling;o.appendChild(s),o.appendChild(e)}}function l(t){for(species of t){const e=document.querySelectorAll(`[data-species="${species}"] .Observation`).length.toString(),n=document.querySelector(`[data-species="${species}"] summary`);n.innerText=`${n.innerText} (${e})`}}const a=u(r);p(a,c),d(r),l(a)})();
+javascript: (() => {
+    const r = document.querySelectorAll('.Observation');
+    if (r.length === 0) {
+        alert('No eBird observations found on page!');
+        return;
+    }
+    if (document.querySelector('[data-species]')) {
+        alert(
+            'Already run script. If you are having issues, reload page and try again.',
+        );
+        return;
+    }
+    const c = r[0].parentNode;
+    function i(t) {
+        return t.querySelector('.Observation-species .Heading-main').innerText;
+    }
+    function u(t) {
+        let e = new Set();
+        for (const n of t) {
+            const o = i(n);
+            e.add(o);
+        }
+        return e;
+    }
+    function p(t, e) {
+        for (const n of t) {
+            const o = document.createElement('details');
+            (o.setAttribute('data-species', n),
+                o.setAttribute('style', 'margin-top: 0.5em'));
+            const s = document.createElement('summary');
+            (s.setAttribute('style', 'cursor: pointer; list-style:'),
+                (s.innerText = n),
+                o.appendChild(s),
+                e.appendChild(o));
+        }
+    }
+    function d(t) {
+        for (let e of t) {
+            const n = i(e),
+                o = document.querySelector(`[data-species="${n}"]`),
+                s = e.previousElementSibling;
+            (o.appendChild(s), o.appendChild(e));
+        }
+    }
+    function l(t) {
+        for (species of t) {
+            const e = document
+                    .querySelectorAll(
+                        `[data-species="${species}"] .Observation`,
+                    )
+                    .length.toString(),
+                n = document.querySelector(
+                    `[data-species="${species}"] summary`,
+                );
+            n.innerText = `${n.innerText} (${e})`;
+        }
+    }
+    const a = u(r);
+    (p(a, c), d(r), l(a));
+})();
 ```
 
 ## Feedback
