--- a/src/content/blog/scrolling-turkey/index.mdx
+++ b/src/content/blog/scrolling-turkey/index.mdx
@@ -8,20 +8,29 @@ tags:
     - turkeys
 draft: false
 ---
-import Turkey from '@components/Turkey.svelte'
-import { Image } from 'astro:assets'
-import linksOriginal from './links-original.png'
-import scrollingTurkey from './scrolling-turkey.gif'
+
+import Turkey from '@components/Turkey.svelte';
+import { Image } from 'astro:assets';
+import linksOriginal from './links-original.png';
+import scrollingTurkey from './scrolling-turkey.gif';
 
 ## Introduction
 
 I have a [very simple links page](https://links.parkerdavis.dev) for sharing links on Instagram and other social media. It currently looks like this:
 
-<Image src={linksOriginal} alt="Original links page screenshot" class="small-image" />
+<Image
+    src={linksOriginal}
+    alt="Original links page screenshot"
+    class="small-image"
+/>
 
 I like to add a little flair throughout the year though and with Thanksgiving being tomorrow, I thought, "why not give thanks to those who visit my links page by showing them one of the most beautiful birds there is, the Wild Turkey?".
 
-<Image src={scrollingTurkey} alt="Links page with scrolling turkey" class="small-image" />
+<Image
+    src={scrollingTurkey}
+    alt="Links page with scrolling turkey"
+    class="small-image"
+/>
 
 I know, its breathtaking. After you take a moment to recover, let's go through the code.
 
@@ -47,7 +56,7 @@ We start with a basic CSS animation. For the HTML there is a `<div class="turkey
 
 ```css
 :root {
-	--turkey-width: 75px;
+    --turkey-width: 75px;
 }
 
 .turkey {
@@ -113,12 +122,12 @@ Create a @keyframes animation with an identifier of "trot" to move it from the l
 }
 ```
 
-The CSS property `animation-delay` only applies to the first iteration of an animation so to create a delay before each turkey entrance,  I opted to position the turkey further to the left at the start of each iteration.
+The CSS property `animation-delay` only applies to the first iteration of an animation so to create a delay before each turkey entrance, I opted to position the turkey further to the left at the start of each iteration.
 
 This all looks pretty good but there are two problems:
 
-1) The speed at which the turkey trots depends on the width of the browser window since the animation duration is a set value
-2) The width of the path the turkey trots is not updated when the user resizes the browser window with some browsers. For animations, the relative values (vw) get converted to absolute values but do not automatically get updated when the window resizes.
+1. The speed at which the turkey trots depends on the width of the browser window since the animation duration is a set value
+2. The width of the path the turkey trots is not updated when the user resizes the browser window with some browsers. For animations, the relative values (vw) get converted to absolute values but do not automatically get updated when the window resizes.
 
 We're going to need a little bit of Javascript for this one.
 
@@ -128,7 +137,7 @@ Let's create a function that adjusts the animation duration based on the window 
 
 ```javascript
 function adjustTurkeyAnimation() {
-    const pixelsPerSecond = 30
+    const pixelsPerSecond = 30;
     const width = window.innerWidth;
     const seconds = width / pixelsPerSecond + 's';
     document.documentElement.style.setProperty('--animation-duration', seconds);
@@ -137,11 +146,11 @@ function adjustTurkeyAnimation() {
 
 I wanted the turkey to trot a certain number of pixels per second, so we can calculate the animation duration by dividing the window width (px) by pixels per second (px/s).
 
-The documentElement property allows you to programmatically set style properties on the root element of the document, the CSS equivalent of: 
+The documentElement property allows you to programmatically set style properties on the root element of the document, the CSS equivalent of:
 
 ```css
 :root {
-	--animation-duration: /* calculated seconds */
+    --animation-duration: /* calculated seconds */;
 }
 ```
 
@@ -156,7 +165,7 @@ By modifying the value of the `animation-duration` property this causes all of t
 
 ### Modularization
 
-I wanted it to be completely modular so I could activate and deactivate the turkey very simply. 
+I wanted it to be completely modular so I could activate and deactivate the turkey very simply.
 
 Instead of hard coding the turkey `div` into the html, let's add it with the script we're already loading.
 
@@ -169,12 +178,12 @@ function adjustTurkeyAnimation() {
     document.documentElement.style.setProperty('--animation-duration', seconds);
 }
 
-+ function createTurkeyContainer() {  
++ function createTurkeyContainer() {
 +   const turkeyContainer = document.createElement('div');
-+   turkeyContainer.setAttribute('class', 'turkey'); 
-+   document.body.appendChild(turkeyContainer); 
++   turkeyContainer.setAttribute('class', 'turkey');
++   document.body.appendChild(turkeyContainer);
 +   adjustTurkeyAnimation()
-+ } 
++ }
 
 - window.addEventListener('load', adjustTurkeyAnimation);
 + window.addEventListener('load', createTurkeyContainer);
@@ -188,7 +197,7 @@ Now the turkey can be added to the page by loading the turkey CSS and JS files v
 ```html
 <!-- turkey.html -->
 
-<link rel="stylesheet" href="assets/turkey/turkey.css">
+<link rel="stylesheet" href="assets/turkey/turkey.css" />
 
 <script src="assets/turkey/turkey.js" defer></script>
 ```
