--- a/src/content/blog/weekly-update-2024/index.mdx
+++ b/src/content/blog/weekly-update-2024/index.mdx
@@ -15,7 +15,8 @@ tags:
     - job-hunt
 draft: false
 ---
-import ConfettiWrapper from '@components/ConfettiWrapper.astro'
+
+import ConfettiWrapper from '@components/ConfettiWrapper.astro';
 
 I'm back from a brief blog hiatus. January is quickly coming to a close so I figure I ought to give a brief update on what has been going on for me. Since last time there have been holiday celebrations, several birthdays, quality time with friends and family, work done for CAP-LTER and...
 
@@ -25,10 +26,7 @@ I'm back from a brief blog hiatus. January is quickly coming to a close so I fig
 
 ...and I got engaged!
 
-<ConfettiWrapper>
-![The happy couple engaged](./engaged.jpg)
-</ConfettiWrapper>
-
+<ConfettiWrapper>![The happy couple engaged](./engaged.jpg)</ConfettiWrapper>
 
 ## Coding
 
