--- a/src/content/projects/evs/index.mdx
+++ b/src/content/projects/evs/index.mdx
@@ -19,12 +19,12 @@ githubUrl: https://github.com/opportunity-hack/evs
 featured: false
 date: 2023-11-16
 ---
-import RelatedPosts from '@components/RelatedPosts.astro'
+
+import RelatedPosts from '@components/RelatedPosts.astro';
 
 ## Links
 
 <ProjectLinks githubUrl={frontmatter.githubUrl} liveUrl={frontmatter.liveUrl} />
-
 
 ## Screenshot
 
@@ -40,27 +40,27 @@ A overview of my contributions can be found [here](https://github.com/opportunit
 
 ### Summary
 
--   UI/UX optimizations
--   Updated forms with custom validation logic and corresponding database schemas
--   Added feature to allow horse cooldown scheduling
-    -   Allows scheduling of rest time for horses
-    -   [Removes horse from events during cooldown period and alerts user of these changes](https://github.com/opportunity-hack/evs/pull/43)
-    -   [Prevents horse from being scheduled to new events during cooldown period](https://github.com/opportunity-hack/evs/pull/47)
--   [Added feature to allow the creation of events on multiple dates](https://github.com/opportunity-hack/evs/pull/54)
--   Added automated testing
--   UX improvement allowing a user's height to be inputed in feet and inches, with error handling, validation, and processing that links the two input fields.
+- UI/UX optimizations
+- Updated forms with custom validation logic and corresponding database schemas
+- Added feature to allow horse cooldown scheduling
+    - Allows scheduling of rest time for horses
+    - [Removes horse from events during cooldown period and alerts user of these changes](https://github.com/opportunity-hack/evs/pull/43)
+    - [Prevents horse from being scheduled to new events during cooldown period](https://github.com/opportunity-hack/evs/pull/47)
+- [Added feature to allow the creation of events on multiple dates](https://github.com/opportunity-hack/evs/pull/54)
+- Added automated testing
+- UX improvement allowing a user's height to be inputed in feet and inches, with error handling, validation, and processing that links the two input fields.
 
 ## Recognition
 
 My contributions and accomplishments were officially recognized by Opportunity Hack:
 
--   Standups Completed
--   Code Reliability
--   Customer Driven Innovation and Design Thinking
--   Iterations of Code Pushed to Production
--   Requirements gathering
--   Code Quality
--   Unit Test Writing
+- Standups Completed
+- Code Reliability
+- Customer Driven Innovation and Design Thinking
+- Iterations of Code Pushed to Production
+- Requirements gathering
+- Code Quality
+- Unit Test Writing
 
 ![Certificate of Opportunity Hack hearts](./opportunity_hack_hearts.png)
 
