--- a/src/content/projects/rba/index.mdx
+++ b/src/content/projects/rba/index.mdx
@@ -2,24 +2,25 @@
 title: Rare Bird Alert!
 description: Full stack web app extending the features and styles of the eBird Rare Bird Alert.
 techtags:
-  - Svelte/Sveltekit
-  - TailwindCSS
-  - HTML
-  - CSS
-  - Javascript
+    - Svelte/Sveltekit
+    - TailwindCSS
+    - HTML
+    - CSS
+    - Javascript
 tags:
-  - rba
-  - svelte/sveltekit
-  - tailwindcss
-  - html
-  - css
-  - javascript
+    - rba
+    - svelte/sveltekit
+    - tailwindcss
+    - html
+    - css
+    - javascript
 githubUrl: https://github.com/parkerdavis1/eBirdRareBird
 liveUrl: https://rarebird.parkerdavis.dev/US-AZ-013?days=7
 featured: true
 date: 2023-11-16
 ---
-import RelatedPosts from '@components/RelatedPosts.astro'
+
+import RelatedPosts from '@components/RelatedPosts.astro';
 
 ## Links
 
@@ -36,4 +37,5 @@ I created this full stack multi-page app using Sveltekit and TailwindCSS. It use
 For the design, I incorporated some of the more modern design elements found in other parts of eBird such as boldly colored title and filter bars, filter tags, as well as incorporating fades and slide-in animations for details and filter modals.
 
 ## Posts tagged with "RBA"
+
 <RelatedPosts tag="rba" bmsTitles={['Slow Doves (and updates)']} />
